deploy/k8s/consulta-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consulta-contatos-api
  namespace: contatos-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consulta-contatos-api
  template:
    metadata:
      labels:
        app: consulta-contatos-api
    spec:
      containers:
      - name: consulta-contatos-api
        image: pedrobaraof/consulta-contatos-api:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: consulta-contatos-api
  namespace: contatos-app
spec:
  selector:
    app: consulta-contatos-api
  ports:
  - name: http
    port: 8081
    targetPort: 8081
  type: ClusterIP
